--- a/roles/instance_utils/templates/mount_sshfs.j2
+++ b/roles/instance_utils/templates/mount_sshfs.j2
@@ -1,2 +1,2 @@
 mkdir -p {{ local_sshfs_directory }}
-sshfs -o allow_other,IdentityFile={{ ansible_ssh_private_key_file }} {{ ansible_user }}@{{ ansible_host }}:{{ remote_sshfs_directory }} {{ local_sshfs_directory }}
+sshfs -o allow_other,IdentityFile={{ ansible_ssh_private_key_file }} {{ remote_user }}@{{ ansible_host }}:{{ remote_sshfs_directory }} {{ local_sshfs_directory }}
