--- a/roles/instance_utils/templates/ssh_tunnel.j2
+++ b/roles/instance_utils/templates/ssh_tunnel.j2
@@ -1,1 +1,1 @@
-nohup ssh -i {{ ansible_ssh_private_key_file }} -N {{ ansible_user }}@{{ ansible_host }} -L {{ instance_port }}:localhost:{{ local_port }} &
+nohup ssh -i {{ ansible_ssh_private_key_file }} -N {{ remote_user }}@{{ ansible_host }} -L {{ remote_port }}:localhost:{{ local_port }} &
